@@ -10,6 +10,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
@@ -74,7 +75,15 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 	}
 
 	protected Map<String, File> getUploadedFiles(String sid) {
-		return UploadServlet.getReceivedFiles(sid);
+		return UploadServlet.getUploads(sid);
+	}
+
+	public void setThreadRequest(HttpServletRequest request) {
+		synchronized (this) {
+			if (perThreadRequest == null)
+				perThreadRequest = new ThreadLocal<HttpServletRequest>();
+			perThreadRequest.set(request);
+		}
 	}
 
 	protected Session validateSession() throws InvalidSessionServerException {
@@ -176,7 +185,7 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 	}
 
 	protected void checkPermission(Permission permission, User user, long folderId) throws AccessDeniedException {
-		FolderDAO dao = (FolderDAO) Context.get().getBean(FolderDAO.class);
+		FolderDAO dao = Context.get(FolderDAO.class);
 		try {
 			if (!dao.isPermissionAllowed(permission, folderId, user.getId())) {
 				String message = String.format("User %s doesn't have permission %s on folder %s", user.getUsername(),
@@ -200,24 +209,31 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 	protected User getSessionUser(String sid) throws InvalidSessionServerException {
 		Session session = validateSession(sid);
 		User user = (User) session.getDictionary().get(USER);
-		UserDAO userDao = (UserDAO) Context.get().getBean(UserDAO.class);
-		userDao.initialize(user);
+		initUser(user);
 		return user;
+	}
+
+	private void initUser(User user) {
+		try {
+			UserDAO userDao = Context.get(UserDAO.class);
+			userDao.initialize(user);
+		} catch (PersistenceException e) {
+			log.warn(e.getMessage(), e);
+		}
 	}
 
 	protected User getSessionUser(HttpServletRequest request) throws InvalidSessionServerException {
 		Session session = validateSession(request);
 		User user = (User) session.getDictionary().get(USER);
-		UserDAO userDao = (UserDAO) Context.get().getBean(UserDAO.class);
-		userDao.initialize(user);
+		initUser(user);
 		return user;
 	}
 
-	protected Object throwServerException(Session session, Logger logger, Throwable t) throws ServerException {
+	protected <R> R throwServerException(Session session, Logger logger, Throwable throwable) throws ServerException {
 		if (logger != null)
-			logger.error(t.getMessage(), t);
+			logger.error(throwable.getMessage(), throwable);
 
-		String message = t.getMessage();
+		String message = throwable.getMessage();
 		if (session != null) {
 			Log lastError = session.getLastError();
 			if (lastError != null) {
@@ -229,21 +245,21 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 		if (message != null)
 			message = message.replace("com.logicaldoc.", "").replace("java.lang.", "");
 
-		if (session != null
-				&& (t instanceof org.hibernate.TransactionException || t instanceof org.hibernate.HibernateException
-						|| t instanceof org.springframework.transaction.TransactionSystemException)) {
+		if (session != null && (throwable instanceof org.hibernate.TransactionException
+				|| throwable instanceof org.hibernate.HibernateException
+				|| throwable instanceof org.springframework.transaction.TransactionSystemException)) {
 			message = I18N.message("dberrorretry", session.getUser().getLocale());
 		}
 
-		if (t instanceof ValidationException ie) {
+		if (throwable instanceof ValidationException ie) {
 			// Translate a validation error
 			throw new ServerValidationException(ie.getMessage(),
 					ie.getErrors().values().stream()
 							.map(e -> new ServerValidationError(e.getAttribute(), e.getLabel(), e.getDescription()))
-							.toList().toArray(new ServerValidationError[0]));
-		} else if (t instanceof PermissionException) {
-			throw new AccessDeniedException(t.getMessage());
-		} else if (t instanceof ServerException se) {
+							.collect(Collectors.toList()) .toArray(new ServerValidationError[0]));
+		} else if (throwable instanceof PermissionException) {
+			throw new AccessDeniedException(throwable.getMessage());
+		} else if (throwable instanceof ServerException se) {
 			throw se;
 		} else
 			throw new ServerException(message);
@@ -287,7 +303,7 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 	 */
 	protected boolean executeLongRunningOperation(String name, Runnable runnable, Session session)
 			throws ServerException {
-		ThreadPools pools = (ThreadPools) Context.get().getBean(ThreadPools.class);
+		ThreadPools pools = Context.get(ThreadPools.class);
 
 		/*
 		 * Build the notifying thread and schedule for immediate execution (1ms
@@ -332,7 +348,7 @@ public abstract class AbstractRemoteService extends RemoteServiceServlet {
 	 * @return The list of attributes
 	 */
 	protected List<GUIAttribute> prepareGUIAttributes(Template template, ExtensibleObject extensibleObject) {
-		TemplateDAO tDao = (TemplateDAO) Context.get().getBean(TemplateDAO.class);
+		TemplateDAO tDao = Context.get(TemplateDAO.class);
 		tDao.initialize(template);
 
 		List<GUIAttribute> attributes = new ArrayList<>();
